--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
     name: Deploy to Vercel (optional)
     runs-on: ubuntu-latest
     needs: ci
-    if: github.ref == 'refs/heads/main' && secrets.VERCEL_TOKEN
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -50,6 +50,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to Vercel
+        if: ${{ secrets.VERCEL_TOKEN }}
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
