--- a/package.json
+++ b/package.json
@@ -13,29 +13,30 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@radix-ui/react-toast": "^1.1.11",
-    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5.10.2",
-    "next-themes": "^0.2.1",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/supabase-js": "^2.76.1",
+    "@tanstack/react-query": "^5.10.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "firebase": "^12.5.0",
     "lucide-react": "^0.462.0",
+    "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.30.1",
     "sonner": "^1.7.4",
-  "react-hook-form": "^7.46.1",
-  "@hookform/resolvers": "^3.3.1",
-  "zod": "^3.23.6",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
