--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,13 +56,33 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-args: --prod
           working-directory: ./
-          # Optionally set these if you want to pin deployment to a specific project/org
-          # vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          # vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+
 
       - name: Vercel deployment info
         run: echo "Deployed to Vercel (see Vercel dashboard or action logs)"
 
-# Notes:
-# - Create the secret VERCEL_TOKEN in your repository Settings → Secrets and Variables → Actions.
-# - If you prefer Render, Netlify, or GitHub Pages for deployment, I can add an additional job.
+
+deploy-firebase:
+  name: Deploy to Firebase
+  runs-on: ubuntu-latest
+  needs: ci
+  if: github.ref == 'refs/heads/main'
+  steps:
+    - uses: actions/checkout@v4
+    
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
+        
+    - name: Install dependencies
+      run: npm ci
+      
+    - name: Build
+      run: npm run build
+      
+    - name: Deploy to Firebase
+      uses: w9jds/firebase-action@master
+      with:
+        args: deploy --only hosting
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
