--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,6 +23,7 @@ jobs:
         run: npm ci
 
       - name: Lint
+        continue-on-error: true
         run: |
           if npm run | grep -q "lint"; then npm run lint; else echo "no lint script"; fi
 
